i finnished my project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
-<h1>LANDGING PAGE<h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicom.css " rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <title>FARENTAL | easy renting</title>          
+</head>
+<body>
+    <nav>
+        <ul class="nav__links">
+            <li class="link"><a href="#">HOME</a></li>
+            <li class="link"><a href="#">ABOUT US</a></li>
+            <li class="link"><a href=".gallary_container">GALLARY</a></li>
+            <li class="link"><a href="#">AVAILABLE</a></li>
+            <li class="link"><a href="#">CONTACTS</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <div class="container__left">
+            <div class="left__content">
+                <h1>"FARENTAL"</h1>
+                <h4>LET'S HELP YOU CHOOSE YOUR NEXT HOME</h4>
+                <P>
+                    You do not only need a house but a home for you and your family
+                </P>
+            </div>
+        </div>
+        <div class="container__right">
+            <img src="assets/wp2.png" alt="image1">
+            <div class="right__content">
+                <h1>RENT EASY | LIVE HAPPY</h1>
+                <h4>CHOOSE FROM A VARIETY OF HOMES</h4>
+                <p>
+                 Today you get into you new home happier and easier like never before.
+                 Welcome to our RENTAL website, where we pride ourselves on being the best guide for you in your home choosing nightmare. whether you're seeking a one bedroom, bedsitter, two bedroom amongst many others, we've got you covered
+                </p>
+                <div class="action__btns">
+                    <button class="btn primary__btn">Explore</button>
+                    <button class="btn secondary__btn" href="README.md">See More</button>
+                </div>
+                <div class="socials">
+                    <span><i class="ri-instagram-line"></i></span>
+                    <span><i class="ri-x-fill"></i></span>
+                    <span><i class="ri-facebook-fill"></i></span>
+                </div>
+            </div>
+        </div>        
+    </div>
+    <div class="features">
+        <h1>FEATURES:</h1>
+        <li>
+            <ul><h3>RENTING</h3></ul>
+                <P>This feature allows the user to rent a house</P>
+            <ul><h3>RETURNING</h3></ul>
+                <p>The user can return the property he/she rented within the web application</p>
+            <ul><h3>e-PAYMENT</h3></ul>
+                <p>The web applicationis intergreted to some online payment solution</p>
+        </li>
+        <div>
+            <img src="assets/snap.png" alt="screenshots">
+        </div>
+    </div>
+    
+    <div class="gallary_container">
+        <div class="header_gallery"><h1>GALLERY</h1></div>
+        <div class="gallery">
+            <img src="assets/img1.jpg" alt="1">
+            <div class="desc">PRICE: Ksh. 100000</div>
+        </div>  
+        <div class="gallery">
+            <img src="assets/img6.png" alt="1">
+            <div class="desc">PRICE: Ksh. 100000</div>
+        </div>   
+        <div class="gallery">
+            <img src="assets/img3.png" alt="1">
+            <div class="desc">PRICE: Ksh. 100000</div>
+        </div>  
+        <div class="gallery">
+            <img src="assets/img4.png" alt="1">
+            <div class="desc">PRICE: Ksh. 100000</div>
+        </div> 
+        <div class="gallery">
+            <img src="assets/img5.png" alt="1">
+            <div class="desc">PRICE: Ksh. 100000</div>
+        </div> 
+        <div class="gallery">
+            <img src="assets/img2.jpg" alt="1">
+            <div class="desc">PRICE: Ksh. 100000</div>
+        </div>   
+    </div>
+    <section class="about-us" id="about-us">
+        <div class="about-us__content">
+        <div>
+          <h1 class="about-us__header">ABOUT US || INSPIRATION</h1>
+            <p class="about-us__description">Everytime i move to a new place my worse nightmare is ussually to find a place to stay quickly and affordable.
+            their is this one time i moved to Kisumu under short notice and i was forced to look for a house to rent, i surelly went through alot and promised myself to one day try and make a system that could help with this, and today i present "FARENTAL" - find your new home the easy way </p>
+        </div>
+        <div class="about-about-us">
+            <h3>LINKEDIN:</h3>
+                <a href="#"><p>MICHAELJUMAH</p></a>
+            <h3>TWITTER:</h3>
+                <a href="#"><p>@Denver</p></a>
+            <h3>GITHUB:</h3>
+                <a href="#"><p>MICHAELJUMAH</p></a>
+            
+        </div >
+        <div class="about-project">
+            <p>To get to the full project <button class="btn secondary__btn"><a href="#">See More</a></button></p>
+        </div>
+        </div>
+    </section>
+</body>
+</html>  
