photos for website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="nav__links">
             <li class="link"><a href="#">HOME</a></li>
             <li class="link"><a href="#">ABOUT US</a></li>
-            <li class="link"><a href=".gallary_container">GALLARY</a></li>
+            <li class="link"><a href="#">GALLARY</a></li>
             <li class="link"><a href="#">AVAILABLE</a></li>
             <li class="link"><a href="#">CONTACTS</a></li>
         </ul>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="container__right">
-            <img src="assets/wp2.png" alt="image1">
+            <img src="https://photos.app.goo.gl/isKeqTEgSrk61eqp8" alt="image1">
             <div class="right__content">
                 <h1>RENT EASY | LIVE HAPPY</h1>
                 <h4>CHOOSE FROM A VARIETY OF HOMES</h4>
