--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <h1>RENT EASY | LIVE HAPPY</h1>
                 <h4>CHOOSE FROM A VARIETY OF HOMES</h4>
                 <p>
-                 Today you get into you new home happier and easier like never before.
-                 Welcome to our RENTAL website, where we pride ourselves on being the best guide for you in your home choosing nightmare. whether you're seeking a one bedroom, bedsitter, two bedroom amongst many others, we've got you covered
+                 Today you get into your new home happier and easier than ever before.
+                 Welcome to our RENTAL website, where we pride ourselves on being the best guide for you in your home-coming nightmare. whether you're seeking a one bedroom, bedsitter, two bedroom amongst many others, we've got you covered
                 </p>
                 <div class="action__btns">
                     <button class="btn primary__btn">Explore</button>
@@ -56,7 +56,7 @@
             <ul><h3>RETURNING</h3></ul>
                 <p>The user can return the property he/she rented within the web application</p>
             <ul><h3>e-PAYMENT</h3></ul>
-                <p>The web applicationis intergreted to some online payment solution</p>
+                <p>The web application is integrated into some online payment solutions </p>
         </li>
         <div>
             <img src="assets/snap.png" alt="screenshots">
