--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="container__right">
-            <img src="https://photos.app.goo.gl/isKeqTEgSrk61eqp8" alt="image1">
+            <img src="wpp.png" alt="image1">
             <div class="right__content">
                 <h1>RENT EASY | LIVE HAPPY</h1>
                 <h4>CHOOSE FROM A VARIETY OF HOMES</h4>
@@ -66,27 +66,27 @@
     <div class="gallary_container">
         <div class="header_gallery"><h1>GALLERY</h1></div>
         <div class="gallery">
-            <img src="assets/img1.jpg" alt="1">
+            <img src="assets/img_o.jpg" alt="1">
             <div class="desc">PRICE: Ksh. 100000</div>
         </div>  
         <div class="gallery">
-            <img src="assets/img6.png" alt="1">
+            <img src="assets/imgsix.png" alt="1">
             <div class="desc">PRICE: Ksh. 100000</div>
         </div>   
         <div class="gallery">
-            <img src="assets/img3.png" alt="1">
+            <img src="assets/imgthree.png" alt="1">
             <div class="desc">PRICE: Ksh. 100000</div>
         </div>  
         <div class="gallery">
-            <img src="assets/img4.png" alt="1">
+            <img src="assets/imgfour.png" alt="1">
             <div class="desc">PRICE: Ksh. 100000</div>
         </div> 
         <div class="gallery">
-            <img src="assets/img5.png" alt="1">
+            <img src="assets/imgfive.png" alt="1">
             <div class="desc">PRICE: Ksh. 100000</div>
         </div> 
         <div class="gallery">
-            <img src="assets/img2.jpg" alt="1">
+            <img src="assets/imgtwo.jpg" alt="1">
             <div class="desc">PRICE: Ksh. 100000</div>
         </div>   
     </div>
