--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="desc">PRICE: Ksh. 100000</div>
         </div> 
         <div class="gallery">
-            <img src="assets/wp1.jpeg" alt="1">
+            <img src="assets/imgtwo.png" alt="1">
             <div class="desc">PRICE: Ksh. 100000</div>
         </div>   
     </div>
