--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     
     <div class="gallary_container">
         <div class="header_gallery"><h1>GALLERY</h1></div>
+        <img src="assets/img_one.jpeg" alt="1">
+            <div class="desc">PRICE: Ksh. 100000</div>
         <div class="gallery">
             <img src="assets/img_one.jpeg" alt="1">
             <div class="desc">PRICE: Ksh. 100000</div>
