--- a/index.html
+++ b/index.html
@@ -65,32 +65,30 @@
     
     <div class="gallary_container">
         <div class="header_gallery"><h1>GALLERY</h1></div>
-        <img src="assets/img_one.jpeg" alt="1">
-            <div class="desc">PRICE: Ksh. 100000</div>
-        <div class="gallery">
-            <img src="assets/img_one.jpeg" alt="1">
-            <div class="desc">PRICE: Ksh. 100000</div>
-        </div>  
-        <div class="gallery">
-            <img src="assets/imgsix.png" alt="1">
-            <div class="desc">PRICE: Ksh. 100000</div>
-        </div>   
-        <div class="gallery">
-            <img src="assets/imgthree.png" alt="1">
-            <div class="desc">PRICE: Ksh. 100000</div>
-        </div>  
-        <div class="gallery">
-            <img src="assets/imgfour.png" alt="1">
-            <div class="desc">PRICE: Ksh. 100000</div>
-        </div> 
-        <div class="gallery">
-            <img src="assets/imgfive.png" alt="1">
-            <div class="desc">PRICE: Ksh. 100000</div>
-        </div> 
-        <div class="gallery">
-            <img src="assets/imgtwo.png" alt="1">
-            <div class="desc">PRICE: Ksh. 100000</div>
-        </div>   
+            <div class="gallery">
+                <img src="assets/img_one.JPEG" alt="1">
+                <div class="desc">PRICE: Ksh. 100000</div>
+            </div>  
+            <div class="gallery">
+                <img src="assets/imgsix.PNG" alt="1">
+                <div class="desc">PRICE: Ksh. 100000</div>
+            </div>   
+            <div class="gallery">
+                <img src="assets/imgthree.PNG" alt="1">
+                <div class="desc">PRICE: Ksh. 100000</div>
+            </div>  
+            <div class="gallery">
+                <img src="assets/imgfour.PNG" alt="1">
+                <div class="desc">PRICE: Ksh. 100000</div>
+            </div> 
+            <div class="gallery">
+                <img src="assets/imgfive.PNG" alt="1">
+                <div class="desc">PRICE: Ksh. 100000</div>
+            </div> 
+            <div class="gallery">
+                <img src="assets/imgtwo.png" alt="1">
+                <div class="desc">PRICE: Ksh. 100000</div>
+            </div>   
     </div>
     <section class="about-us" id="about-us">
         <div class="about-us__content">
