--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="container__right">
-            <img src="assets/wpp.png" alt="image1">
+            <img src="assets/wpp.PNG" alt="image1">
             <div class="right__content">
                 <h1>RENT EASY | LIVE HAPPY</h1>
                 <h4>CHOOSE FROM A VARIETY OF HOMES</h4>
@@ -66,7 +66,7 @@
     <div class="gallary_container">
         <div class="header_gallery"><h1>GALLERY</h1></div>
             <div class="gallery">
-                <img src="assets/img_one.JPEG" alt="1">
+                <img src="assets/img_one.JPG" alt="1">
                 <div class="desc">PRICE: Ksh. 100000</div>
             </div>  
             <div class="gallery">
@@ -86,7 +86,7 @@
                 <div class="desc">PRICE: Ksh. 100000</div>
             </div> 
             <div class="gallery">
-                <img src="assets/imgtwo.png" alt="1">
+                <img src="assets/imgtwo.PNG" alt="1">
                 <div class="desc">PRICE: Ksh. 100000</div>
             </div>   
     </div>
