--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="container__right">
-            <img src="assets/wpp.PNG" alt="image1">
+            <img src="assets/wpp.PNG" alt="wpp">
             <div class="right__content">
                 <h1>RENT EASY | LIVE HAPPY</h1>
                 <h4>CHOOSE FROM A VARIETY OF HOMES</h4>
