--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="container__right">
-            <img src="assets/wpp.PNG" alt="wpp">
+            <img src="assets/wpp.png" alt="wpp">
             <div class="right__content">
                 <h1>RENT EASY | LIVE HAPPY</h1>
                 <h4>CHOOSE FROM A VARIETY OF HOMES</h4>
@@ -38,7 +38,7 @@
                 </p>
                 <div class="action__btns">
                     <button class="btn primary__btn">Explore</button>
-                    <button class="btn secondary__btn" href="README.md">See More</button>
+                    <button class="btn secondary__btn" href="https://github.com/michaeljumah/FAR-RENTAL/blob/main/README.md">See More</button>
                 </div>
                 <div class="socials">
                     <span><i class="ri-instagram-line"></i></span>
@@ -107,7 +107,7 @@
             
         </div >
         <div class="about-project">
-            <p>To get to the full project <button class="btn secondary__btn"><a href="#">See More</a></button></p>
+            <p>To get to the full project <button class="btn secondary__btn"><a href="https://github.com/michaeljumah/FAR-RENTAL">See More</a></button></p>
         </div>
         </div>
     </section>
