--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>  
             <div class="gallery">
                 <img src="assets/imgsix.PNG" alt="1">
-                <div class="desc">PRICE: Ksh. 100000</div>
+                <div class="desc">PRICE: Ksh. 10t00</div>
             </div>   
             <div class="gallery">
                 <img src="assets/imgthree.PNG" alt="1">
