--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <nav>
         <ul class="nav__links">
-            <li class="link"><a href="#">HOME</a></li>
-            <li class="link"><a href="#">ABOUT US</a></li>
-            <li class="link"><a href="#">GALLARY</a></li>
-            <li class="link"><a href="#">AVAILABLE</a></li>
-            <li class="link"><a href="#">CONTACTS</a></li>
+            <li class="link"><a href="index.html">HOME</a></li>
+            <li class="link"><a href="#about-us">ABOUT US</a></li>
+            <li class="link"><a href="#features">GALLARY</a></li>
+            <li class="link"><a href="#gallary_container">AVAILABLE</a></li>
+            <li class="link"><a href="#about-us">CONTACTS</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -48,7 +48,7 @@
             </div>
         </div>        
     </div>
-    <div class="features">
+    <div class="features" id="features">
         <h1>FEATURES:</h1>
         <li>
             <ul><h3>RENTING</h3></ul>
@@ -63,7 +63,7 @@
         </div>
     </div>
     
-    <div class="gallary_container">
+    <div class="gallary_container" id="gallary_container">
         <div class="header_gallery"><h1>GALLERY</h1></div>
             <div class="gallery">
                 <img src="assets/img_one.JPG" alt="1">
