added more information in the about us section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
                 <a href="https://twitter.com/MichaelDenver8"><p>MichaelDenver8</p></a>
             <h3>GITHUB:</h3>
                 <a href="https://github.com/michaeljumah"><p>michaeljumah</p></a>
+            <h3>EMAIL:</h3>
+                <a href="michaeljumah8@gmail.com"><p>michaeljumah8@gmail.com</p></a>
             
         </div >
        
