worked on the explore button

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                  Welcome to our RENTAL website, where we pride ourselves on being the best guide for you in your home-coming nightmare. whether you're seeking a one bedroom, bedsitter, two bedroom amongst many others, we've got you covered
                 </p>
                 <div class="action__btns">
-                    <button class="btn primary__btn">Explore</button>
-                    <button class="btn secondary__btn" href="https://github.com/michaeljumah/FAR-RENTAL/blob/main/README.md">See More</button>
+                    <button class="btn primary__btn"><a href="#gallary_container">Explore</a></button>
+                    <button class="btn secondary__btn"><a href="https://github.com/michaeljumah/FAR-RENTAL/blob/main/README.md">See More</a></button>
                 </div>
                 <div class="socials">
                     <span><i class="ri-instagram-line"></i></span>
