--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <a href="michaeljumah8@gmail.com"><p>michaeljumah8@gmail.com</p></a>
             
         </div >
-       
+       //sends user to the projects github page
         <div class="about-project">
             <p>To get to the full project <button class="btn secondary__btn"><a href="https://github.com/michaeljumah/FAR-RENTAL">See More</a></button></p>
         </div>
